ActivityAttendVO、ActivityAttendDAPJDBC、ActivityAttendService、ActivityAttendServlet、ActivityReportService、ActivityReportServlet、addAttend.jsp、addReport.jsp、listAllActa.jsp、listAllActr.jsp、listOneActa.jsp、update_acta_input.jsp、DBGifReader4.java、web.xml
報名活動、我參與的活動、檢舉活動、為活動評分、活動檢舉(相關VO、JDBC、Service、Servlet、jsp)(jsp皆先放在back_end之下)