@@ -106,15 +106,33 @@ public class ActivityAttendServlet extends HttpServlet {
 				try {
 					/***************************1.接收請求參數 - 輸入格式的錯誤處理**********************/
 					
-					Integer memberId = new Integer(req.getParameter("memberId").trim());
-					Integer activityId = new Integer(req.getParameter("activityId").trim());
+//參與會員編號					
+					int memberId =Integer.valueOf(req.getParameter("memberId"));
+					if(memberId==0) {
+						errorMsgs.add("參與會員編號請勿空白");
+					}
+//參與活動編號
+					int activityId = Integer.valueOf(req.getParameter("activityId"));
+					if(activityId==0) {
+						errorMsgs.add("參與活動編號請勿空白");
+					}
+//評論內容(活動結束後)					
 					String comment = req.getParameter("comment").trim();
 					if (comment == null || comment.trim().length() == 0) {
-						errorMsgs.add("評論請勿空白");
-					}	
-					String note = req.getParameter("note").trim();
-					Integer status = new Integer(req.getParameter("status").trim());
+						errorMsgs.add("評論內容請勿空白");
+					}
 
+//活動內容備註(報名時)					
+					String note = req.getParameter("note").trim();
+					if (note == null || note.trim().length() == 0) {
+						errorMsgs.add("活動內容備註請勿空白");
+					}
+//付款狀態					
+					int status = Integer.valueOf(req.getParameter("status"));
+					if(status==-1) {
+						errorMsgs.add("請選擇付款狀態");
+					}
+					
 					ActivityAttendVO actaVO = new ActivityAttendVO();
 					actaVO.setMemberId(memberId);
 					actaVO.setActivityId(activityId);
@@ -149,34 +167,35 @@ public class ActivityAttendServlet extends HttpServlet {
 					failureView.forward(req, res);
 				}
 			}
-//		 if ("getOne_For_Update".equals(action)) { // 來自listAllActa.jsp的請求
-//
-//				List<String> errorMsgs = new LinkedList<String>();
-//				// Store this set in the request scope, in case we need to
-//				// send the ErrorPage view.
-//				req.setAttribute("errorMsgs", errorMsgs);
-//				
-//				try {
-//					/***************************1.接收請求參數****************************************/
-//					Integer empno = new Integer(req.getParameter("empno"));
-//					
-//					/***************************2.開始查詢資料****************************************/
-//					ActivityAttendServiceImpl actaSvc = new ActivityAttendServiceImpl();
-//					ActivityAttendVO actaVO = actaSvc.getOneActa();
-//									
-//					/***************************3.查詢完成,準備轉交(Send the Success view)************/
-//					req.setAttribute("actaVO", actaVO);         // 資料庫取出的empVO物件,存入req
-//				String url = "/emp/update_emp_input.jsp";
-//					RequestDispatcher successView = req.getRequestDispatcher(url);// 成功轉交 update_emp_input.jsp
-//					successView.forward(req, res);
-//
-//					/***************************其他可能的錯誤處理**********************************/
-//				} catch (Exception e) {
-//					errorMsgs.add("無法取得要修改的資料:" + e.getMessage());
-//					RequestDispatcher failureView = req
-//							.getRequestDispatcher("/listAllActa.jsp");
-//					failureView.forward(req, res);
-//				}
-//			}
+		 if ("getOne_For_Update".equals(action)) { // 來自listAllActa.jsp的請求
+
+				List<String> errorMsgs = new LinkedList<String>();
+				// Store this set in the request scope, in case we need to
+				// send the ErrorPage view.
+				req.setAttribute("errorMsgs", errorMsgs);
+				
+				try {
+					/***************************1.接收請求參數****************************************/
+					int memberId =Integer.valueOf(req.getParameter("memberId"));
+					int activityId = Integer.valueOf(req.getParameter("activityId"));
+					
+					/***************************2.開始查詢資料****************************************/
+					ActivityAttendServiceImpl actaSvc = new ActivityAttendServiceImpl();
+					ActivityAttendVO actaVO = actaSvc.getOneActa(memberId,activityId);
+									
+					/***************************3.查詢完成,準備轉交(Send the Success view)************/
+					req.setAttribute("actaVO", actaVO);         // 資料庫取出的empVO物件,存入req
+					String url = "/back_end/activity/update_acta_input.jsp";
+					RequestDispatcher successView = req.getRequestDispatcher(url);// 成功轉交 update_emp_input.jsp
+					successView.forward(req, res);
+
+					/***************************其他可能的錯誤處理**********************************/
+				} catch (Exception e) {
+					errorMsgs.add("無法取得要修改的資料:" + e.getMessage());
+					RequestDispatcher failureView = req
+							.getRequestDispatcher("/back_end/activity/listAllActa.jsp");
+					failureView.forward(req, res);
+				}
+			}
 	}
 }
